--- a/templates/index.html
+++ b/templates/index.html
@@ -64,18 +64,71 @@
             margin-top: 30px;
         }
 
+        .text-box {
+            margin-top: 30px;
+        }
+
     </style>
 
     <script>
+        $(document).ready(function () {
+            listing("latest");
+        });
+
+
+        function listing(order) {
+            $.ajax({
+                type: "GET",
+                url: `/listing?order=${order}`,
+                data: {},
+                success: function (response) {
+                    $("#card-box").empty();
+                    let posts = response["posts"];
+                    for (let i = 0; i < posts.length; i++) {
+                        make_post(posts[i], i);
+                    }
+                }
+            })
+        }
+
+        function make_post(post) {
+            let temp_html = `<div class="col">
+                                <div class="card h-100" id="card-${post['post_id']}" onclick="location.href='/posts/${post['post_id']}'"s>
+                                    <img src="" class="card-img-top" alt="">
+                                    <div class="card-body">
+                                        <h5 class="card-title">${post['title']}</h5>
+                                        <p class="card-text">${post['nickcname']}</p>
+                                        <p class="card-text">${post['like']}</p>
+                                    </div>
+                                </div>
+                            </div>`
+            $("#card-box").append(temp_html)
+        }
+
         function search() {
             let query = $('#search-box').val();
             if (query == "") {
                 alert("검색어를 입력하세요");
                 return;
             } else {
-                $('#searchform').submit();
+                $.ajax({
+                    type: "GET",
+                    url: `/search?query=${query}`,
+                    data: {},
+                    success: function (response) {
+                        $("#card-box").empty();
+                        let posts = response["posts"];
+                        for (let i = 0; i < posts.length; i++) {
+                            make_post(posts[i], i);
+                        }
+
+                        $("#query-text-box").append(`"${query}" 검색내역 입니다.`)
+                        $("#query-text-box").removeClass("is-hidden");
+                    }
+                });
             }
         }
+
     </script>
 </head>
 <body>
@@ -95,11 +148,9 @@
 </section>
 
 <div class="search">
-    <form action="/search" method="GET" id="searchform">
-        <input type="text" class="search-input" id="search-box" name="query" placeholder="검색어 입력">
-        <img class="search-img" onclick="search()"
-             src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
-    </form>
+    <input type="text" class="search-input" id="search-box" name="query" placeholder="검색어 입력">
+    <img class="search-img" onclick="search()"
+         src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/icon/search.png">
 </div>
 
 <section class="float-right">
@@ -135,22 +186,14 @@
     </div>
 </section>
 <section>
-    <a><span class="tag is-medium">최신순</span></a>
-    <a><span class="tag is-medium">관심순</span></a>
+    <a onclick="listing('latest')"><span class="tag is-medium">최신순</span></a>
+    <a onclick="listing('like')"><span class="tag is-medium">관심순</span></a>
 </section>
-<div class="row row-cols-1 row-cols-md-3 g-4 card-box">
-{% for post in posts %}
-    <div class="col">
-        <div class="card h-100" id="card-{{post.post_id}}" onclick="location.href='/posts/{{post.post_id}}'"s>
-            <img src="" class="card-img-top" alt="">
-            <div class="card-body">
-                <h5 class="card-title">{{post.title}}</h5>
-                <p class="card-text">{{post.nickname}}</p>
-                <p class="card-text">{{post.like}}</p>
-            </div>
-        </div>
-    </div>
-{% endfor %}
+
+<section class="text-box is-hidden" id="query-text-box">
+</section>
+
+<div class="row row-cols-1 row-cols-md-3 g-4 card-box" id="card-box">
 </div>
 </body>
 </html>
