--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>고구마캣</title>
 
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/b8cc3ce1fa.js" crossorigin="anonymous"></script>
+
     <!-- bulma -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 
@@ -21,6 +24,11 @@
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
 
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
+
 
     <style>
         body {
@@ -28,8 +36,24 @@
             margin: auto;
         }
 
+        .hero-img {
+            width: 60px;
+            height: 60px;
+        }
+
+        .hero-font {
+            /*color: #C886A4;*/
+            color: #543343;
+            font-family: 'Noto Sans KR', sans-serif;
+
+        }
+
         .float-right {
             float: right;
+        }
+
+        .login-btn {
+            margin-top: 10px;
         }
 
         .write-btn {
@@ -67,7 +91,6 @@
         .text-box {
             margin-top: 30px;
         }
-
     </style>
 
     <script>
@@ -93,12 +116,16 @@
 
         function make_post(post) {
             let temp_html = `<div class="col">
-                                <div class="card h-100" id="card-${post['post_id']}" onclick="location.href='/posts/${post['post_id']}'"s>
-                                    <img src="" class="card-img-top" alt="">
+                                <div class="card h-100" id="card-${post['post_id']}">
+                                    <img src="" class="card-img-top" onclick="location.href='/posts/${post['post_id']}'">
                                     <div class="card-body">
-                                        <h5 class="card-title">${post['title']}</h5>
+                                        <h5 class="card-title" onclick="location.href='/posts/${post['post_id']}'">${post['title']}</h5>
                                         <p class="card-text">${post['nickcname']}</p>
-                                        <p class="card-text">${post['like']}</p>
+                                        <p class="card-text">
+                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-solid fa-heart"></i>
+                                            ${post['like_count']}
+                                        </p>
                                     </div>
                                 </div>
                             </div>`
@@ -132,19 +159,25 @@
     </script>
 </head>
 <body>
-<section class="float-right">
-    <button class="button">로그인</button>
+<section class="float-right login-btn">
+    <button class="button is-light">로그인 하러 가기</button>
 </section>
 <section class="hero" onclick="window.location.href='/'">
     <div class="hero-body">
-        <p class="title">
+        <img class="hero-img" src="/static/gogumacat.png">
+        <span class="title hero-font">
             고구마캣
-        </p>
+        </span>
     </div>
 </section>
 </section>
 <section class="write-btn">
-    <button class="button is-dark">상품 등록하러 가기</button>
+    <button class="button is-dark">
+        <span class="icon is-small">
+            <i class="fa-solid fa-pencil fab"></i>
+        </span>
+        <span>상품 등록하러 가기</span>
+    </button>
 </section>
 
 <div class="search">
