feat : 배너 이미지 맞춤 posting 페이지 연결 지도와 이미지 업데이트 진행중

--- a/templates/index.html
+++ b/templates/index.html
@@ -211,7 +211,7 @@
 </section>
 </section>
 <section class="write-btn">
-    <button class="button is-dark">
+    <button class="button is-dark" onclick="location.href='/posting/{{ user_info.username}}'">
         <span class="icon is-small">
             <i class="fa-solid fa-pencil fab"></i>
         </span>
