--- a/templates/user.html
+++ b/templates/user.html
@@ -3,34 +3,111 @@
 <head>
 
     <!-- Webpage Title -->
-    <title>{{ user_info.name }} | 고구마캣</title>
+    <title>{{ user_info.nickname }} | 고구마캣</title>
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/b8cc3ce1fa.js" crossorigin="anonymous"></script>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Bulma CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <!-- Font Awesome CSS -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- my CSS -->
-    <link href="{{ url_for('static', filename='mystyle.css') }}" rel="stylesheet">
-
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-    <script src="{{ url_for('static',filename='myjs.js') }}"></script>
+    <style>
+        body {
+            width: 1000px;
+            margin: auto;
+        }
+
+        #tabs-with-content .tabs:not(:last-child) {
+            margin-bottom: 0;
+        }
+
+        #tabs-with-content .tab-content {
+            padding: 1rem;
+            display: none;
+        }
+
+        #tabs-with-content .tab-content.is-active {
+            display: block;
+        }
+
+        .help {
+            color: gray;
+        }
+    </style>
 
     <script>
         $(document).ready(function () {
             get_posts('{{ user_info.username }}');
+            let tabsWithContent = (function () {
+                let tabs = document.querySelectorAll('.tabs li');
+                let tabsContent = document.querySelectorAll('.tab-content');
+
+                let deactvateAllTabs = function () {
+                    tabs.forEach(function (tab) {
+                        tab.classList.remove('is-active');
+                    });
+                };
+
+                let hideTabsContent = function () {
+                    tabsContent.forEach(function (tabContent) {
+                        tabContent.classList.remove('is-active');
+                    });
+                };
+
+                let activateTabsContent = function (tab) {
+                    tabsContent[getIndex(tab)].classList.add('is-active');
+                };
+
+                let getIndex = function (el) {
+                    return [...el.parentElement.children].indexOf(el);
+                };
+
+                tabs.forEach(function (tab) {
+                    tab.addEventListener('click', function () {
+                        deactvateAllTabs();
+                        hideTabsContent();
+                        tab.classList.add('is-active');
+                        activateTabsContent(tab);
+                    });
+                })
+
+                tabs[0].click();
+            })();
         });
 
         function sign_out() {
             $.removeCookie('mytoken', {path: '/'});
             alert('로그아웃!')
+
+            // if (Kakao.Auth.getAccessToken()) {
+            //     Kakao.API.request({
+            //         url: '/v1/user/unlink',
+            //         success: function (response) {
+            //             console.log(response)
+            //         },
+            //         fail: function (error) {
+            //             console.log(error)
+            //         },
+            //     })
+            //     Kakao.Auth.setAccessToken(undefined)
+            // } else {
+            //
+            // }
+
             window.location.href = "/login"
         }
 
@@ -43,15 +120,14 @@
                     $("#card-box").empty();
                     let posts = response["posts"];
                     for (let i = 0; i < posts.length; i++) {
-                        make_post(posts[i], i);
+                        make_post(posts[i]);
                     }
                 }
             });
         }
 
         function make_post(post) {
-            let temp_html = `<div class="col">
-                                <div class="card h-100" id="card-${post['post_id']}">
+            let temp_html = `<div class="card" id="card-${post['post_id']}" style="width: 18rem;">
                                     <img src="" class="card-img-top" onclick="location.href='/posts/${post['post_id']}'">
                                     <div class="card-body">
                                         <h5 class="card-title" onclick="location.href='/posts/${post['post_id']}'">${post['title']}</h5>
@@ -62,14 +138,20 @@
                                             ${post['like_count']}
                                         </p>
                                     </div>
-                                </div>
-                            </div>`
-            $("#card-box").append(temp_html)
+                                </div>`
+            $("#card-box-post").append(temp_html)
         }
 
 
         function update_profile() {
-            let name = $('#input-name').val()
+            if ($("#help-nickname").hasClass("is-danger")) {
+                alert("닉네임을 다시 확인해주세요.")
+                return;
+            } else if (!$("#help-nickname").hasClass("is-success")) {
+                alert("닉네임 중복확인을 해주세요.")
+                return;
+            }
+            let name = $('#input-nickname').val()
             let file = $('#input-pic')[0].files[0]
             let about = $("#textarea-about").val()
             let form_data = new FormData()
@@ -93,6 +175,35 @@
                 }
             });
         }
+
+        function check_dup_nick() {
+            let nickname = $("#input-nickname").val()
+            console.log(nickname)
+            if (nickname == "") {
+                $("#help-nickname").text("닉네임을 입력해주세요.").removeClass("is-safe").addClass("is-danger")
+                $("#input-nickname").focus()
+                return;
+            }
+            $("#help-nickname").addClass("is-loading")
+            $.ajax({
+                type: "POST",
+                url: "/sign_up/check_dup_nick",
+                data: {
+                    nickname_give: nickname
+                },
+                success: function (response) {
+
+                    if (response["exists"]) {
+                        $("#help-nickname").text("이미 존재하는 닉네임입니다.").removeClass("is-safe").addClass("is-danger")
+                        $("#input-nickname").focus()
+                    } else {
+                        $("#help-nickname").text("사용할 수 있는 닉네임입니다.").removeClass("is-danger").addClass("is-success")
+                    }
+                    $("#help-nickname").removeClass("is-loading")
+
+                }
+            });
+        }
     </script>
 
 </head>
@@ -110,7 +221,7 @@
         <article class="media">
             <figure class="media-left" style="align-self: center">
                 <a class="image is-96x96" href="#">
-<!--                    <img class="is-rounded" src="{{ url_for('static', filename=user_info.profile_pic_real) }}">-->
+                    <img class="is-rounded" src="{{ url_for('static', filename=user_info.profile_pic_real) }}">
                 </a>
             </figure>
             <div class="media-content">
@@ -143,13 +254,14 @@
                     <article class="media">
                         <div class="media-content">
                             <div class="field">
-                                <label class="label" for="input-name">이름</label>
-
-                                <p class="control">
-
-                                    <input id="input-name" class="input"
-                                           placeholder="홍길동" value="{{ user_info.profile_name }}">
-                                </p>
+                                <label class="label" for="input-nickname">이름</label>
+                                <p>
+                                    <input id="input-nickname" class="input" placeholder="{{ user_info.nickname }}"
+                                           value="{{ user_info.profile_name }}" style="width: 500px">
+                                    <button class="button is-light" style="float: right" onclick="check_dup_nick()">
+                                        중복확인
+                                    </button>
+                                <p id="help-nickname" class="help">닉네임을 입력해주세요</p>
                             </div>
                             <div class="field">
                                 <label class="label" for="input-pic">프로필 사진</label>
@@ -202,9 +314,50 @@
         {% endif %}
     </div>
 </section>
-<section class="section">
-    <div class="row row-cols-1 row-cols-md-3 g-4 card-box" id="card-box">
+<section id="tabs-with-content">
+    <div class="tabs is-boxed">
+        <ul>
+            <li>
+                <a>
+                    <span class="icon is-small"><i class="fas fa-memo-pad"></i></span>
+                    <span>작성한 글</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon is-small"><i class="fas fa-comment-dots"></i></span>
+                    <span>작성한 댓글</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon is-small"><i class="fas fa-face-smile-beam"></i></span>
+                    <span>거래후기</span>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <span class="icon is-small"><i class="fas fa-heart"></i></span>
+                    <span>관심상품</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <section class="tab-content">
+            <div class="card-deck card-box" id="card-box-post"></div>
+        </section>
+        <section class="tab-content">
+            <div class="card-deck card-box" id="card-box-reply"></div>
+        </section>
+        <section class="tab-content">Videos content
+            <div class="card-deck card-box" id="card-box-review"></div>
+        </section>
+        <section class="tab-content">
+            <div class="card-deck card-box" id="card-box-like"></div>
+        </section>
     </div>
 </section>
+
 </body>
 </html>
