feat : 이미지 미리보기 기능 추가 파일 첨부시 이미지 나타나게 추가

--- a/templates/posting.html
+++ b/templates/posting.html
@@ -4,6 +4,7 @@
     <!-- Webpage Title -->
     <title>GOGUMACAT</title>
 
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,11 +21,8 @@
     <!-- 주소 검색 API-->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <!--지도 api-->
-    <script type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9600c7eddf2d8ec432aa9d8791d1e471"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=9600c7eddf2d8ec432aa9d8791d1e471&libraries=services,clusterer,drawing"></script>
     <meta charset="UTF-8">
-
-
 
 
     <style>
@@ -39,6 +37,7 @@
             font-family: 'Noto Sans KR', sans-serif;
 
         }
+
         .wrap {
             width: 700px;
             margin: 100px auto 0px auto;
@@ -63,7 +62,6 @@
     <script>
         $(document).ready(function () {
             fileupload()
-            map()
         })
 
         //파일 업로드 시 제목 띄우기
@@ -92,6 +90,7 @@
                     $('#image_preview img').attr('src', blobURL);
                     $('#image_preview').slideDown(); //업로드한 이미지 미리보기
                     $(this).slideUp(); //파일 양식 감춤
+                    $("#image_preview").toggleClass("is-hidden")
                 }
             });
         }
@@ -99,20 +98,42 @@
 
         //지도 띄우는 코드
         function map() {
+            let local = $('#local_address').val()
             var mapContainer = document.getElementById('map'), // 지도를 표시할 div
                 mapOption = {
-                    center: new daum.maps.LatLng(37.537187, 127.005476), // 지도의 중심좌표
-                    level: 5 // 지도의 확대 레벨
+                    center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+                    level: 3 // 지도의 확대 레벨
                 };
 
-            //지도를 미리 생성
-            var map = new daum.maps.Map(mapContainer, mapOption);
-            //주소-좌표 변환 객체를 생성
-            var geocoder = new daum.maps.services.Geocoder();
-            //마커를 미리 생성
-            var marker = new daum.maps.Marker({
-                position: new daum.maps.LatLng(37.537187, 127.005476),
-                map: map
+            // 지도를 생성합니다
+            var map = new kakao.maps.Map(mapContainer, mapOption);
+
+            // 주소-좌표 변환 객체를 생성합니다
+            var geocoder = new kakao.maps.services.Geocoder();
+
+            // 주소로 좌표를 검색합니다
+            geocoder.addressSearch('local', function (result, status) {
+
+                // 정상적으로 검색이 완료됐으면
+                if (status === kakao.maps.services.Status.OK) {
+
+                    var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+                    // 결과값으로 받은 위치를 마커로 표시합니다
+                    var marker = new kakao.maps.Marker({
+                        map: map,
+                        position: coords
+                    });
+
+                    // 인포윈도우로 장소에 대한 설명을 표시합니다
+                    var infowindow = new kakao.maps.InfoWindow({
+                        content: '<div style="width:150px;text-align:center;padding:6px 0;">우리회사</div>'
+                    });
+                    infowindow.open(map, marker);
+
+                    // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+                    map.setCenter(coords);
+                }
             });
         }
 
@@ -122,28 +143,11 @@
                     var addr = data.address; // 최종 주소 변수
 
                     // 주소 정보를 해당 필드에 넣는다.
-                    document.getElementById("local").value = addr;
-                    // 주소로 상세 정보를 검색
-                    geocoder.addressSearch(data.address, function (results, status) {
-                        // 정상적으로 검색이 완료됐으면
-                        if (status === daum.maps.services.Status.OK) {
-
-                            var result = results[0]; //첫번째 결과의 값을 활용
-
-                            // 해당 주소에 대한 좌표를 받아서
-                            var coords = new daum.maps.LatLng(result.y, result.x);
-                            // 지도를 보여준다.
-                            mapContainer.style.display = "block";
-                            map.relayout();
-                            // 지도 중심을 변경한다.
-                            map.setCenter(coords);
-                            // 마커를 결과값으로 받은 위치로 옮긴다.
-                            marker.setPosition(coords)
-                        }
-                    });
+                    document.getElementById("local_address").value = addr
                 }
             }).open();
         }
+
 
         {#var autocomplete = new google.maps.places.Autocomplete($("#address")[0], {});#}
         {##}
@@ -168,34 +172,31 @@
 <h3 class="title is-3" style="text-align: center;">대여 등록하기 </h3>
 {#전체 입력 글#}
 <div class="wrap">
-
     <input class="input is-normal" type="text" placeholder="제목, 물품명을 적어주세요">
     <input class="input is-normal" type="text" placeholder="대여 가능한 날짜를 적어주세요">
     <input class="input is-normal" type="text" placeholder="가격(1일 기준 대여가격)">
-{#이미지 업로드 부분#}
+    {#이미지 업로드 부분#}
     <div id="file-js-example" class="file has-name is-info">
         <label class="file-label " style="margin-top: 10px">
-            <input class="file-input" type="file" name="resume" id="img" onclick="img_up()">
+            <input class="file-input" type="file" name="resume" id="img" onclick="img_up()"
+                   accept="image/jpeg, image/jpg, image/png"/>
             <span class="file-cta">
       <span class="file-label">제품 사진</span>
     </span>
             <span class="file-name"></span>
         </label>
     </div>
-{#이미지 미리보기#}
-    <div id="image_preview">
-        <img style="width:126px;height: 165px">
+    {#이미지 미리보기#}
+    <div id="image_preview" class="is-hidden">
+        <img style="width:300px;height: 200px">
     </div>
     {#상세내용#}
-    <textarea class="textarea" style="margin-top: 10px" placeholder="상세 내용을 적어주세요" rows="10"></textarea>
+    <textarea class="textarea" style="margin-top: 10px" placeholder="상세 내용을 적어주세요" rows="5"></textarea>
     {#주소 검색부분#}
-    <div class="field has-addons">
-        <div class="control">
-            <input id="local" class="input" type="text" placeholder="직거래 위치 찾기" style="width: 400px">
-        </div>
-        <div class="control" style="margin-top: 10px; margin-left: 5px">
-            <input type="button" class="button is-info" onclick="local_search()" value="검색">
-        </div>
+    <div class="field">
+        <input id="local_address" class="input" type="text" placeholder="직거래 위치 찾기" style="width: 400px"
+               onclick="local_search()">
+        <input type="button" class="button is-info" onclick="map()" value="검색" style="margin-top: 10px">
     </div>
     {#지도api#}
     <div id="map" style="width: 500px;height:300px;margin:10px auto 50px auto"></div>
